tests/snapshots/composition/oneline_docstring_methods.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/composition/oneline_docstring_methods.input.py
---
"""
A class whose methods each carry a single-line docstring with no
blank line between the methods.

Rules:
- no_single_line_docstrings
- multi_line_docstrings
- blank_lines
"""


class Service:

    def primary(self):
        """
        The primary entry point.
        """
        return 1

    def secondary(self):
        """
        The secondary entry point.
        """
        return 2
