tests/snapshots/composition/oneline_then_multiline.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/composition/oneline_then_multiline.input.py
---
"""
A class whose methods each carry a single-line triple-quoted
docstring on one source line.

Rules:
- no_single_line_docstrings
- multi_line_docstrings
"""


class Service:
    def primary(self):
        """
        The primary entry point.
        """
        return 1
    def secondary(self):
        """
        The secondary entry point.
        """
        return 2
