tests/snapshots/composition/predicate_in_function.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/composition/predicate_in_function.input.py
---
align-comparisons@411..412
align-comparisons@458..459
align-equals@297..298
align-equals@362..363
