tests/snapshots/composition/removed_future_top.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/composition/removed_future_top.input.py
---
blank-lines@185..190
unused-future-annotations@187..222
