tests/snapshots/composition/removed_future_top.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/composition/removed_future_top.input.py
---
"""
A module opening with `from __future__ import annotations` followed
by extra blank lines before the first non-import statement.

Rules:
- unused_future_annotations
- blank_lines
"""


def add(a, b):
    return a + b
