tests/snapshots/composition/signature_with_alignment.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/composition/signature_with_alignment.input.py
---
align-colons@569..569
align-colons@584..584
align-colons@602..602
align-colons@618..618
align-colons@642..642
align-equals@654..655
alphabetize@559..635
signature-layout@559..635
